--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -1,14 +1,23 @@
+/* *{
+    margin: 0px;
+    padding: 0px;
+} */
+
+
 .open-sans-normal {
     font-family: "Open Sans", serif;
     font-optical-sizing: auto;
     font-style: normal;
     font-variation-settings:
-      "wdth" 100;
+      "width" 100;
   }
 
-  body{
+  .header{
     background-color: #FFF8F3;
-  }
+    background-image: url("../images/developer.png") , url("../images/header_bg.png");
+    background-position: top left , bottom right;
+    background-repeat: no-repeat;
+}   
 /* Nav bar css */
 
 #nav{
@@ -17,7 +26,8 @@
     justify-content: space-between;
     margin-left: 226px;
     margin-right: 230px;
-    margin-top: 50px;
+    /* margin-top: 50px; */
+    
     
 }
 #nav>h1{
@@ -53,5 +63,97 @@ nav li a{
     font-weight: 700;
     font-size: 20px;
     padding: 18px 35px;
+    
 }
 
+/* Banner Section */
+.banner{
+    margin-left: 226px;
+    margin-right: 42px;
+    display: flex;
+    align-items: center;
+}
+.bannert1{
+    color: rgb(71, 71, 71);
+    font-family: Open Sans;
+    font-size: 45px;
+    font-weight: 600;
+    line-height: 61px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 5px;
+}
+
+.bannert2{
+    color: rgb(24, 24, 24);
+    font-family: Open Sans;
+    font-size: 85px;
+    font-weight: 700;
+    line-height: 116px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.bannert3{
+    color: rgb(117, 117, 117);
+    font-family: Open Sans;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 30px;
+}
+
+
+.orngbutton2{
+    background-color: #FD6E0A;
+    /* color: white; */
+    height: 64px;
+    width: 150px;
+    border: none;
+    border-radius: 5px;
+    font-weight: 700;
+    font-size: 20px;
+    /* padding: 18px 35px; */
+    
+}
+
+.orngbutton2 a{
+    text-decoration: none;
+    color: white;
+}
+
+.orngbutton3{
+    background-color: rgba(255, 255, 255, 0);
+    /* color: white; */
+    height: 64px;
+    width: 150px;
+    border: none;
+    border-radius: 5px;
+    font-weight: 700;
+    font-size: 20px;
+    padding: 18px 35px;
+    border: 1px solid #FD6E0A;
+    margin-left: 30px;
+    
+}
+
+.orngbutton3 a{
+    text-decoration: none;
+    color: #FD6E0A;
+}
+
+.bannercontent{
+    max-width: 585px;
+}
+.banner{
+    display: flex;
+    justify-content:space-between
+}
+
+.bannerimg{
+    display: flex;
+    justify-content: right;
+}
