--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -157,3 +157,45 @@ nav li a{
     display: flex;
     justify-content: right;
 }
+
+/* Menu Section ---------------------------------------------- */
+
+.sectionhead{
+    color: rgb(24, 24, 24);
+    font-family: Open Sans;
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.sectionp{
+    color: rgb(117, 117, 117);
+    font-family: Open Sans;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: center;
+}
+
+#main{
+        margin: 0px 230px;
+        max-width: 1140px;
+        margin: 0 auto;
+}
+
+.about{
+    background-color: #FFF8F3;
+    border-radius: 0px;
+    margin: 0 auto;
+    padding: 131px 157px;
+    margin: 130px 0;
+}
+
+.aboutmeinline{
+    display: flex;
+    justify-content: space-around;
+}
+
+.abtitem{
+    text-align: center;
+}
