--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -198,6 +198,7 @@ nav li a{
 
 .abtitem{
     text-align: center;
+    color: #757575;
 }
 
 .whatido{
@@ -217,5 +218,26 @@ nav li a{
     font-size: 18px;
     font-weight: 400;
     text-align: center;
+    padding: 0 110px;
     
 }
+
+
+.skillset{
+    display: flex;
+    text-align: left;
+    gap: 24px;
+    margin-top: 50px;
+    
+}
+
+.skill{
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    background: rgb(255, 255, 255);
+    padding: 33px 33px;
+}
+
+
+
+
