--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -238,6 +238,203 @@ nav li a{
     padding: 33px 33px;
 }
 
+/* RESUME ------------------------------------- */
+
+.resume{
+    margin-top: 100px ;
+}
+
+.resumebox{
+    /* width: 511px; */
+    /* gap: 24px; */
+}
+.resume h3{
+    color: rgb(24, 24, 24);
+    font-family: Open Sans;
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 113px;
+}
+
+
+.resumeh4{
+    color: rgb(71, 71, 71);
+    font-family: Open Sans;
+    font-size: 30px;
+    font-weight: 700;
+    text-align: left;
+    
+}
+
+.resumeh5{
+    color: rgb(71, 71, 71);
+    font-family: Open Sans;
+    font-size: 25px;
+    font-weight: 700;
+    text-align: left;
+    
+}
+
+.resumeh6{
+    color: rgb(117, 117, 117);
+    font-family: Open Sans;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: left;
+    margin-top: -30px;
+}
+
+
+.resumep{
+    color: rgb(117, 117, 117);
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+    
+    
+}
+
+hr{
+    width: 558px;
+    border: 1px solid rgb(209, 209, 209);
+    margin-top: 30px 0;
+}
+
+.motherbox{
+    display: flex;
+    gap: 24px;
+    
+}
+
+.cvbutton{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+.downloadcv{
+
+    text-align: center;
+    width: 200px;
+    height: 64px;
+    border: 0px solid;
+    border-radius: 5px;
+    background: rgb(253, 110, 10);
+    margin-bottom: 113px;
+}
+
+.downloadcv a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-family: Open Sans;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+}
+
+/* Footer part------------------------------------------------------ */
+.footer{
+    /* margin: 0px 230px; */
+
+    background-color: #FFF8F3;
+    padding-left:230px;
+    
+}
+
+.fatherbox{
+    /* max-width: 1140px; */
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    
+    
+    
+
+}
+.footerh2{
+    color: rgb(24, 24, 24);
+    font-family: Open Sans;
+    font-size: 35px;
+    font-weight: 700;
+    text-align:left;
+}
+
+.footerp{
+    color: rgb(71, 71, 71);
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+}
+
+#yourname{
+    width: 461px;
+    height: 64px;
+    border: 0px solid;
+    margin-bottom: 24px;
+}
 
 
 
+#yourname::placeholder{
+    color: rgb(117, 117, 117);
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+    padding-left: 30px;
+
+}
+
+#textarea{
+    width: 461px;
+    height: 180px;
+    border-radius: 5px;
+    background: rgb(255, 255, 255);
+    border: 0px solid;
+}
+
+#textarea::placeholder{
+    color: rgb(117, 117, 117);
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+    padding-left: 30px;
+    padding-top: 18px;
+
+}
+
+
+
+.left{
+    padding-right: 117px;
+    padding-left: 150px;
+}
+
+.socialimg{
+    margin-right: 24px;
+    margin-top: 30px;
+}
+
+.submit{
+    width: 150px;
+    height: 64px;
+    border-radius: 5px;
+    background: rgb(253, 110, 10);
+    border: 0px solid;
+    margin-top: 24px;
+    margin-bottom: 130px;
+
+}
+
+.submit a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-family: Open Sans;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+}
